--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,8 @@
 .App {
   text-align: center;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -24,15 +15,16 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.but {
+  color: black;
+  border: 1px solid black;
+  background-color: gray;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.but:hover {
+  background-color: white;
+}
+
+.but:active {
+  background-color: yellow;
 }
